@@ -25,7 +25,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.10  2006-06-11 19:47:25  tino
+# Revision 1.11  2006-08-01 00:31:09  tino
+# Make dist worked when it should not work
+#
+# Revision 1.10  2006/06/11 19:47:25  tino
 # See ChangeLog
 #
 # Revision 1.9  2005/12/05 02:11:12  tino
@@ -114,8 +117,8 @@ tagcvs()
 if !	(
 	cd "$here" &&
 	[ -z "`cvs diff 2>/dev/null | fgrep ========`" ] &&
+	cvs tag -F "`echo "dist-$here" | sed 's/[^-A-Za-z0-9]\\+/_/g'`" &&
 	cvs tag -F "`echo "dist-$here-$VERS" | sed 's/[^-A-Za-z0-9]\\+/_/g'`"
-	cvs tag -F "`echo "dist-$here" | sed 's/[^-A-Za-z0-9]\\+/_/g'`"
 	)
 then
 	echo "
