@@ -1,5 +1,7 @@
 2006-08-01    <tino@firebird.03.softkill.net>
 
+	* Makefile-tar.sh (tagcvs): Bug in checking of "make dist" fixed
+
 	* md5.h (main): corrected, printed 1 byte to few digest!
 
 	* longmath.h: added
